[gd_scene load_steps=8 format=3 uid="uid://2hfec6e2psrt"]

[ext_resource type="Texture2D" uid="uid://b5reujse0v2tx" path="res://backgrounds/realbg.png" id="1_3v6bi"]
[ext_resource type="Script" path="res://scenes/flapgame.gd" id="1_lngo2"]
[ext_resource type="PackedScene" uid="uid://7ks3mk55w2v2" path="res://scenes/pipe.tscn" id="2_cskgo"]
[ext_resource type="PackedScene" uid="uid://dxc5ort76bdxj" path="res://scripts/Flaplaf.tscn" id="2_g44ht"]
[ext_resource type="PackedScene" uid="uid://cnhuh0c81ixfl" path="res://scenes/ground.tscn" id="4_x2n2m"]
[ext_resource type="AudioStream" uid="uid://c5fyuluk7qih6" path="res://Music/Duck Quack - Sound Effect (HD) (mp3cut.net).mp3" id="6_anebl"]
[ext_resource type="AudioStream" uid="uid://du8lei2gk7ddu" path="res://Music/critical-hit-sounds-effect.mp3" id="7_rviso"]

[node name="flapgame" type="Node"]
script = ExtResource("1_lngo2")
pipe_scene = ExtResource("2_cskgo")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(-1, 0)
texture = ExtResource("1_3v6bi")
offset = Vector2(432, 464)

[node name="Olaf" parent="." instance=ExtResource("2_g44ht")]
scale = Vector2(8, 8)

[node name="Ground" parent="." instance=ExtResource("4_x2n2m")]
z_index = 1
position = Vector2(-1, 852)

[node name="PipeTimer" type="Timer" parent="."]
wait_time = 1.5

[node name="Quack" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_anebl")

[node name="ded" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_rviso")

[connection signal="hit" from="Ground" to="." method="_on_ground_hit"]
[connection signal="timeout" from="PipeTimer" to="." method="_on_pipe_timer_timeout"]
